--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "social_network",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "seed": "node utils/seed"
   },
   "keywords": [],
-  "author": "",
+  "author": "Barry Engler",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
